--- a/software-designer/medium/1、计算机组成与结构/计算机基本工作原理.md
+++ b/software-designer/medium/1、计算机组成与结构/计算机基本工作原理.md
@@ -59,4 +59,22 @@
 * 相加：两个浮点数相加 需要先对其小数点，在相加尾数；即先对阶，将小阶向大阶对齐，同时将尾数右移n位
 
 * 浮点数范围：
+
 ![](../../../assets/float-number-range.jpg)
+
+
+## 计算机组成
+* CPU访问速度：通用寄存器存取最快，其次Cache, 再次内存的存取，访问速度最慢的是作为外存的硬盘
+* 三总线：数据总线、地址总线、控制总线
+
+### 常用运算器
+* 程序计数器：是一个中央处理器CPU中的寄存器，其功能是存储下一条要执行的指令（在机器语言中）的内存地址
+* 加法器 算术逻辑单元，简称ALU，是计算机的数学大脑，也就是计算机里负责运算的组件。 
+* 指令寄存器：在计算机科学中是中央处理器中控制单元用来存储执行中指令的寄存器。在简易的处理器中，每个将被执行的指令都会被存入指令寄存器中。从解码、准备到执行完成的过程中都会被持续的保存；其位数取决于指令字长(对用户完全透明)
+* 指令译码器：指令译码器(Instruction Decoder,ID)是控制器中的主要部件之一。计算机能且只能执行“指令”。指令由操作码和地址码组成。操作码表示要执行的操作性质，即执行什么操作，或做什么；地址码是操作码执行时的操作对象的地址。
+* 状态寄存器：状态寄存器又称cpsr，是cpu运算器的一部分。主要存放两类信息：
+
+1、存放当前指令执行结果的各种状态或条件码，结果是否为负、是否为0、是否进位、是否溢出；
+2、存放控制信息，有终端标志位、跟踪标志位。
+* 通用寄存器：通用寄存器可用于传送和暂存数据，也可参与算术逻辑运算，并保存运算结果。
+* 累加寄存器：累加寄存器（Accumulator register）通常简称为累加器，它是一个通用寄存器。其功能是：当运算器的算术逻辑单元(ALU)执行算术或逻辑运算时，为ALU提供一个工作区。
