--- a/software-designer/medium/1、计算机组成与结构/计算机基本工作原理.md
+++ b/software-designer/medium/1、计算机组成与结构/计算机基本工作原理.md
@@ -72,6 +72,7 @@
 * 加法器 算术逻辑单元，简称ALU，是计算机的数学大脑，也就是计算机里负责运算的组件。 
 * 指令寄存器：在计算机科学中是中央处理器中控制单元用来存储执行中指令的寄存器。在简易的处理器中，每个将被执行的指令都会被存入指令寄存器中。从解码、准备到执行完成的过程中都会被持续的保存；其位数取决于指令字长(对用户完全透明)
 * 指令译码器：指令译码器(Instruction Decoder,ID)是控制器中的主要部件之一。计算机能且只能执行“指令”。指令由操作码和地址码组成。操作码表示要执行的操作性质，即执行什么操作，或做什么；地址码是操作码执行时的操作对象的地址。
+* 地址寄存器：保存当前CPU所访问的内存单元地址
 * 状态寄存器：状态寄存器又称cpsr，是cpu运算器的一部分。主要存放两类信息：
 
 1、存放当前指令执行结果的各种状态或条件码，结果是否为负、是否为0、是否进位、是否溢出；
